update latex code

--- a/Exercise 5/180631J_A05_EN4720.tex
+++ b/Exercise 5/180631J_A05_EN4720.tex
@@ -196,7 +196,7 @@
 		
 		\item Finally, flush your iptables rules again. But this time, load the saved iptables rules from the file \textbf{iptablesRuleNew.v4} using \texttt{iptables-restore} command. View the iptables rules and compare them with the ones you have in step 8.
 		\begin{answer}
-			\begin{figure}[h]
+			\begin{figure}[H]
 				\centering
 				\includegraphics[width=0.65\columnwidth]{images/part1/11.png}
 				\caption{Flushing current rules and restoring saved rules}
