--- a/Exercise 5/180631J_A05_EN4720.tex
+++ b/Exercise 5/180631J_A05_EN4720.tex
@@ -301,13 +301,19 @@
 		
 		\item View ip addresses of both devices using \texttt{hostname -I} command.
 		\begin{answer}
-			%% TODO: Add answer here
-			Your answer here
+			\begin{figure}[H]
+				\centering
+				\includegraphics[width=0.9\columnwidth]{images/part3/2.png}
+				\caption{IP addresses of the two devices (Laptop \& a Raspberry Pi)}
+			\end{figure}
 		\end{answer}
 		\item Scan one host from the other host for TCP and UDP ports using \texttt{nmap} command.
 		\begin{answer}
-			%% TODO: Add answer here
-			Your answer here
+			\begin{figure}[H]
+				\centering
+				\includegraphics[width=0.9\columnwidth]{images/part3/4.png}
+				\caption{Scan Raspberry Pi device from the Laptop for TCP and UDP ports}
+			\end{figure}
 		\end{answer}\textbf{}
 		
 		\section*{Section 2}
