q 15 complet in sction 2

--- a/Exercise 5/180631J_A05_EN4720.tex
+++ b/Exercise 5/180631J_A05_EN4720.tex
@@ -331,8 +331,13 @@
 		\item Briefly explain VLANs, VPNs, DMZs and Network Segmentation concepts outlining their similarities and differences.
 		
 		\begin{answer}
-			%% TODO: Add answer here
-			Your answer here
+			\textbf{VLAN (a virtual local area network} allows multiple logical networks to exist on the same physical network. This improves the security and the performance of a given network by limiting the access to the resources within the given VLAN and isolating the traffic of a given VLAN from other VLANs respectively. VLANs assigned for each department of an organization is an example for this.\\
+			
+			\textbf{VPN (a virtual private network)} allows an encrypted tunnel to be created between two end points in an unsecured network (eg: internet) for secure communication. This minimize the possibility of being tracked by a malicious third party. VPNs are used to connect remote employees or branches of an organization, to its corporate network for secure communication.\\
+			
+			\textbf{DMZ (a demilitarized zone)} or otherwise known as a perimeter network/ screened subnet is a physical or logical network segment (a buffer) that separates an organization's internal LAN from the other unsecured networks (eg: internet). This allows an additional layer of security to be maintained, as it restrict the direct access from the internet to the LAN. The services/ servers provided to public are placed in the DMZ, while organization's private resources are kept in the internal network.\\
+			
+			\textbf{Network Segmentation} is a method to isolate/ control the traffic of a given network. As in the VLANs, improved performance due to reduced traffic congestion and improved security due to virtual isolation of networks are the benefits.\\		
 		\end{answer}
 		
 		\item Perform a comparison between IPsec and SSL.
